src/tests/snapshots/synoik__tests__window_opening__check_fullscreen_maximize@fsF-wfsAN-wmA.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nwant fullscreen: AN\nwant maximized: A"
expression: snapshot
---
initial configure:
size: 616 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Maximized]
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Activated, Maximized]

unmaximize configure:
size: 616 × 688, bounds: 1248 × 688, states: [Activated]
